# karma

./: .travis.yml  CMakeLists.txt  README.md  index.html
.github/: CONTRIBUTING.md
app/: CMakeLists.txt
app/RAD/: karma.rad
app/scripts/: karma.xml.template  karmaTool.xml.template  karmaToolProjection.xml.template
doxygen/: generate.txt
doxygen/doc/html/: _form0.eps  _formulas.dvi  _formulas.tex  dir_0485f0c3e5fc27f1b21a0a793d715761.html  dir_29c9db2f94dd348f3d685c9fccd668c5.html  dir_2c4c692e0e93e67fe6dacb9253ee9a1d.html  dir_41f00478989b00c299e09b5f630aa3f5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7487e53a8124ea55fc67b4fc4eb7b40c.html  dir_a61e44ac46e7253a0943cfd762c184f9.html  dir_d5fc9e74ecd446ba07279cb903928e76.html  dir_db5aab25642573dc60c61c7a424e232a.html  dir_f234616accb428072e31fe708f34c8ab.html  dir_fc03fb402f9f2a4202506acbbf0a4b9a.html  dir_fe78f95ef73225985cbb37ca6fe2b4d3.html  files.html  group__karmaLearn.html  group__karmaMotor.html  group__karmaToolFinder.html  group__karmaToolProjection.html  index.html  karmaLearn_2main_8cpp_source.html  karmaManager_2include_2iCub_2module_8h_source.html  karmaManager_2include_2iCub_2utils_8h_source.html  karmaManager_2src_2main_8cpp_source.html  karmaManager_2src_2module_8cpp_source.html  karmaManager_2src_2utils_8cpp_source.html  karmaMotor_2main_8cpp_source.html  karmaToolFinder_2main_8cpp_source.html  karmaToolProjection_2include_2iCub_2module_8h_source.html  karmaToolProjection_2include_2iCub_2utils_8h_source.html  karmaToolProjection_2src_2main_8cpp_source.html  karmaToolProjection_2src_2module_8cpp_source.html  karmaToolProjection_2src_2utils_8cpp_source.html  modules.html
doxygen/doc/html/search/: all_0.js  all_2.js  groups_1.js  searchdata.js
doxygen/doc/latex/: dir_0485f0c3e5fc27f1b21a0a793d715761.tex  dir_29c9db2f94dd348f3d685c9fccd668c5.tex  dir_2c4c692e0e93e67fe6dacb9253ee9a1d.tex  dir_41f00478989b00c299e09b5f630aa3f5.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7487e53a8124ea55fc67b4fc4eb7b40c.tex  dir_a61e44ac46e7253a0943cfd762c184f9.tex  dir_d5fc9e74ecd446ba07279cb903928e76.tex  dir_db5aab25642573dc60c61c7a424e232a.tex  dir_f234616accb428072e31fe708f34c8ab.tex  dir_fc03fb402f9f2a4202506acbbf0a4b9a.tex  dir_fe78f95ef73225985cbb37ca6fe2b4d3.tex  group__karmaLearn.tex  group__karmaMotor.tex  group__karmaToolFinder.tex  group__karmaToolProjection.tex  modules.tex  refman.tex
karmaLearn/: CMakeLists.txt  main.cpp
karmaManager/: CMakeLists.txt
karmaManager/include/iCub/: module.h
karmaManager/src/: module.cpp
karmaMotor/: main.cpp
karmaToolFinder/: CMakeLists.txt  main.cpp
karmaToolProjection/: CMakeLists.txt
karmaToolProjection/src/: main.cpp  module.cpp  utils.cpp
src/: CMakeLists.txt
src/karmaLearn/: CMakeLists.txt  main.cpp
src/karmaManager/: CMakeLists.txt
src/karmaManager/include/iCub/: module.h  utils.h
src/karmaManager/src/: main.cpp  module.cpp
src/karmaMotor/: CMakeLists.txt  main.cpp
src/karmaToolFinder/: CMakeLists.txt  main.cpp
src/karmaToolProjection/include/iCub/: module.h  utils.h
src/karmaToolProjection/src/: main.cpp  module.cpp
