# Copyright: (C) 2012 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Ugo Pattacini, Vadim Tikhanoff
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(karmaManager)
add_subdirectory(karmaMotor)
add_subdirectory(karmaLearn)
add_subdirectory(karmaToolProjection)
add_subdirectory(karmaToolFinder)
